<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#73000000" >

    <include
        android:id="@+id/includedAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/action_bar" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/includedAction"
        android:padding="30dp" >

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/top_rounded_corner_white_colored_background"
                android:paddingBottom="20dp" >

                <RelativeLayout
                    android:id="@+id/relativeLayout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/thin_black_border_transparent_background"
                    android:padding="@dimen/thin_border_width" >

                    <EditText
                        android:id="@+id/registerUsernameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:background="@android:color/transparent"
                        android:hint="@string/username"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:nextFocusForward="@+id/registerEmailEditText"
                        android:padding="10dp"
                        android:textColor="#000000"
                        android:textColorHint="#d3d3d3"
                        android:textSize="15sp" >
                    </EditText>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/RelativeLayout03"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/relativeLayout1"
                    android:layout_alignRight="@+id/relativeLayout1"
                    android:layout_below="@+id/relativeLayout1"
                    android:layout_marginTop="14dp"
                    android:background="@drawable/thin_black_border_transparent_background"
                    android:padding="@dimen/thin_border_width" >

                    <EditText
                        android:id="@+id/registerEmailEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:background="@android:color/transparent"
                        android:hint="@string/email"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:nextFocusForward="@+id/registerPasswordEditText"
                        android:padding="10dp"
                        android:textColor="#000000"
                        android:textColorHint="#d3d3d3"
                        android:textSize="15sp" >
                    </EditText>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/relativeLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/relativeLayout1"
                    android:layout_alignRight="@+id/relativeLayout1"
                    android:layout_below="@+id/RelativeLayout03"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/thin_black_border_transparent_background"
                    android:padding="@dimen/thin_border_width" >

                    <EditText
                        android:id="@+id/registerPasswordEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/password"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:nextFocusForward="@+id/registerConfirmPasswordEditText"
                        android:padding="10dp"
                        android:textColor="#000000"
                        android:textColorHint="#d3d3d3"
                        android:textSize="15sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/RelativeLayout01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/relativeLayout1"
                    android:layout_alignRight="@+id/relativeLayout1"
                    android:layout_below="@+id/relativeLayout3"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/thin_black_border_transparent_background"
                    android:padding="@dimen/thin_border_width" >

                    <EditText
                        android:id="@+id/registerConfirmPasswordEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:background="@android:color/transparent"
                        android:hint="@string/confirmpassword"
                        android:imeOptions="actionGo"
                        android:inputType="textPassword"
                        android:padding="10dp"
                        android:textColor="#000000"
                        android:textColorHint="#d3d3d3"
                        android:textSize="15sp" >
                    </EditText>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/loginRelativeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/RelativeLayout01"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="15dp"
                    android:background="#56B750"
                    android:padding="@dimen/thin_border_width" >

                    <TextView
                        android:id="@+id/registerSignupTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:background="@android:color/transparent"
                        android:padding="10dp"
                        android:text="@string/register"
                        android:textColor="#FFFFFf"
                        android:textSize="15sp" >
                    </TextView>

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignRight="@+id/registerSignupTextView"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="14dp"
                        android:src="@drawable/right_btn_arrow" />
                </RelativeLayout>
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>

  

</RelativeLayout>